monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4122/A4122.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4122;

grammar A4122 {

  symbol A = Name;

  ASymbol = "foo";

}